# zeroraft

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  zeroraft-todo.md
.github/workflows/: coverage.yml
zeroraft/: Cargo.toml  README.md
zeroraft/src/: builder.rs  channels.rs  command.rs  default.rs  error.rs  lib.rs  node.rs  request.rs  response.rs  snapshot.rs  state.rs  store.rs  timeout.rs
zeroraft/src/role/: common.rs  mod.rs  role_candidate.rs  role_follower.rs  role_leader.rs  state.rs
zeroraft/src/roles/: role_candidate.rs  role_follower.rs  role_leader.rs  role_nonvoter.rs
zeroraft/src/utils/: mock.rs  mod.rs
zeroraft/tests/: test_election.rs  test_lifecycle.rs  test_replication.rs
zeroraft/tests/fixtures/: cluster.rs  mod.rs  server.rs  state.rs  store.rs
