[workspace]
members = ["zeroraft"]
resolver = "2"

[workspace.package]
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/zerocore-ai/zeroraft"
authors = ["Stephen Akinyemi <steve@zerocore.ai>"]
edition = "2021"

[workspace.dependencies]
async-trait = "0.1.77"
anyhow = "1.0.79"
cbor4ii = { version = "0.3.2", features = ["serde1"] }
clap = { version = "4.4.8", features = ["derive", "color"] }
futures = "0.3.30"
rand = "0.8.5"
regex = "1.10.4"
serde = { version = "1.0.194", features = ["derive"] }
structstruck = "0.4.1"
test-log = { version = "0.2.14", features = ["trace", "tracing-subscriber"] }
thiserror = "1.0.56"
tokio = { version = "1.34.0", features = ["full"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
typed-builder = "0.18.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
zeroutils-config = { git = "https://github.com/zerocore-ai/zeroutils", rev = "3af023f" }
