[package]
name = "zeroraft"
description = "Extended Raft implementation for the Zerocore project"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
cbor4ii.workspace = true
futures.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
zeroutils-config.workspace = true

[dev-dependencies]
test-log.workspace = true


[features]
default = []
metrics = []
debug = ["tracing/max_level_debug"]
info = ["tracing/max_level_info"]
